[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F100xx family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f103xx-hal"
repository = "https://github.com/japaric/stm32f103xx-hal"
version = "0.1.0"

[dependencies]
cortex-m = "0.5.0"
nb = "0.1.1"
stm32f103xx = "0.10.0"
cortex-m-rt = "0.5.1"
panic-semihosting = "0.2.0"
panic-itm = "0.1.1"

[dependencies.stable_deref_trait]
default-features = false
version = "1.0.0"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.0"

[dev-dependencies]
cortex-m-semihosting = "0.2.0"
enc28j60 = "0.2.0"
# heapless = "0.3.1"
heapless = { git = "https://github.com/japaric/heapless", branch = "object-pool" }
m = "0.1.1"
mfrc522 = "0.2.0"

[dev-dependencies.cortex-m-rtfm]
# version = "0.4.0"
git = "https://github.com/japaric/cortex-m-rtfm"
branch = "tq"
features = ["timer-queue"]

[dev-dependencies.byteorder]
default-features = false
version = "1.2.1"

[dev-dependencies.cobs]
default-features = false
version = "0.1.3"

[dev-dependencies.crc16]
default-features = false
version = "0.3.4"

[dev-dependencies.either]
default-features = false
version = "=1.0.0"

[dev-dependencies.jnet]
git = "https://github.com/japaric/jnet"
rev = "df96b408049ca952ad7844d6552e87cf8fc18d2a"

[dev-dependencies.motor-driver]
git = "https://github.com/japaric/motor-driver"
rev = "00c8b15223643090d69f1acfb8b7a7a43a440417"

[dev-dependencies.mpu9250]
git = "https://github.com/japaric/mpu9250"
rev = "8f9ecad690093cb71c41301ca5e5705706150610"

[dev-dependencies.serde]
default-features = false
version = "1.0.33"

[dev-dependencies.serde_derive]
version = "1.0.33"

[dev-dependencies.serde-json-core]
git = "https://github.com/japaric/serde-json-core"
rev = "6f12b77c1ffeae167989fe06e0d8b15978bd6d18"

[dev-dependencies.stm32f103xx]
features = ["rt"]
version = "0.10.0"

[features]
doc = []
rt = ["stm32f103xx/rt"]

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
