[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "HAL for the STM32F100xx family of microcontrollers"
keywords = ["arm", "cortex-m", "stm32", "hal"]
license = "MIT OR Apache-2.0"
name = "stm32f103xx-hal"
edition = "2018"
repository = "https://github.com/japaric/stm32f103xx-hal"
version = "0.1.0"

[dependencies]
stm32f103xx = "0.11.0"
cortex-m = "0.5.7"
nb = "0.1.1"
cortex-m-rt = "0.6.5"

[dependencies.void]
default-features = false
version = "1.0.2"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dev-dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"
panic-itm = "0.4.0"
cortex-m-rtfm = "0.4.0"
cortex-m-semihosting = "0.3.2"
enc28j60 = "0.2.0"
heapless = "0.4.0"
libm = "0.1.2"
mfrc522 = "0.2.0"
as-slice = "0.1.0"
serde_derive = "1.0.33"
serde-json-core = "0.0.1"
mpu9250 = "0.7.3"

[dev-dependencies.byteorder]
default-features = false
version = "1.2.1"

[dev-dependencies.cobs]
default-features = false
version = "0.1.3"

[dev-dependencies.crc16]
default-features = false
version = "0.4.0"

[dev-dependencies.either]
default-features = false
version = "1.5.0"

[dev-dependencies.jnet]
git = "https://github.com/japaric/jnet"
rev = "df96b408049ca952ad7844d6552e87cf8fc18d2a"

[dev-dependencies.motor-driver]
git = "https://github.com/japaric/motor-driver"

[dev-dependencies.serde]
default-features = false
version = "1.0.33"

[dev-dependencies.stm32f103xx]
features = ["rt"]
version = "0.11.0"

[features]
default = ["stm32f103"]
doc = []
rt = ["stm32f103xx/rt"]
stm32f103 = []

[profile.dev]
incremental = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug = true
lto = true
