[package]
name = "stm32f103xx-hal"
version = "0.1.0"
authors = ["Jorge Aparicio <jorge@japaric.io>"]

[dependencies]
stm32f103xx = "0.8.0"
cortex-m = "0.4.2"
nb = "0.1.1"

[dependencies.cast]
default-features = false
version = "0.2.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.1.0"

[features]
rt = ["stm32f103xx/rt"]
